--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           </div>
           <div class="table__cell">
             <h3 class="table__heading">420 миллионов</h3>
-            <p class="table__cell__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+            <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
             <p class="table__text">Всемирный Банк, 2017</p>
           </div>
           <div class="table__cell">
@@ -136,11 +136,11 @@
     
     <footer class="footer">
       <div class="footer__columns">
-        <div class="footer__column footer__column_content_copyright">
+        <div class="footer__column_content_copyright">
           <a class="logo logo_place_footer" href="#"></a>
           <p class="footer__author">&copy;2020. Милана Бируля</p>
         </div>
-        <nav class="footer__column footer__column_content_info">
+        <nav class="footer__column_content_info">
           <h5 class="footer__column-heading">О Практикуме</h5>
           <ul class="footer__column-links">
             <li><a class="footer__links" href="#">Главная</a></li>
@@ -148,17 +148,17 @@
             <li><a class="footer__links" href="#">Наставники</a></li>
           </ul>
         </nav>
-        <nav class="footer__column footer__column_content_social">
+        <nav class="footer__column_content_social">
           <h5 class="footer__column-heading">Соцсети</h5>
-          <ul class="footer__column-link">
-            <li><a class="footer__icons" href="#">
-              <img class="footer__links__illustration" src="./images/facebook_color_white.svg" alt="иконка Facebook">Facebook
+          <ul class="footer__column-links">
+            <li><a class="footer__links" href="#">
+              <img class="social-icon" src="./images/facebook_color_white.svg" alt="иконка Facebook">Facebook
             </a></li>
-            <li><a class="footer__icons" href="#">
-              <img class="footer__links__illustration" src="./images/vk_color_white.svg" alt="иконка ВКонтакте">ВКонтакте
+            <li><a class="footer__links" href="#">
+              <img class="social-icon" src="./images/vk_color_white.svg" alt="иконка ВКонтакте">ВКонтакте
             </a></li>
-            <li><a class="footer__icons" href="#">
-              <img class="footer__links__illustration" src="./images/instagram_color_white.svg" alt="иконка Instagram">Instagram
+            <li><a class="footer__links" href="#">
+              <img class="social-icon" src="./images/instagram_color_white.svg" alt="иконка Instagram">Instagram
             </a></li>
           </ul> 
         </nav>
