--- a/index.html
+++ b/index.html
@@ -136,11 +136,11 @@
     
     <footer class="footer">
       <div class="footer__columns">
-        <div class="footer__column_content_copyright">
+        <div class="footer__column footer__column_content_copyright">
           <a class="logo logo_place_footer" href="#"></a>
           <p class="footer__author">&copy;2020. Милана Бируля</p>
         </div>
-        <nav class="footer__column_content_info">
+        <nav class="footer__column footer__column_content_info">
           <h5 class="footer__column-heading">О Практикуме</h5>
           <ul class="footer__column-links">
             <li><a class="footer__links" href="#">Главная</a></li>
@@ -148,17 +148,17 @@
             <li><a class="footer__links" href="#">Наставники</a></li>
           </ul>
         </nav>
-        <nav class="footer__column_content_social">
+        <nav class="footer__column footer__column_content_social">
           <h5 class="footer__column-heading">Соцсети</h5>
           <ul class="footer__column-links">
             <li><a class="footer__links" href="#">
-              <img class="social-icon" src="./images/facebook_color_white.svg" alt="иконка Facebook">Facebook
+              <img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="иконка Facebook">Facebook
             </a></li>
             <li><a class="footer__links" href="#">
-              <img class="social-icon" src="./images/vk_color_white.svg" alt="иконка ВКонтакте">ВКонтакте
+              <img class="footer__social-icon" src="./images/vk_color_white.svg" alt="иконка ВКонтакте">ВКонтакте
             </a></li>
             <li><a class="footer__links" href="#">
-              <img class="social-icon" src="./images/instagram_color_white.svg" alt="иконка Instagram">Instagram
+              <img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="иконка Instagram">Instagram
             </a></li>
           </ul> 
         </nav>
