--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
-  <link rel="stylesheet" href="./styles/normalize.css">
-  <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="./vendor/normalize.css">
+  <link rel="stylesheet" href="./pages/index.css">
 </head>
 <body>
   <div class="page">
     <header class="header">
-      <a class="logo logo_place_header" href="#"></a>
+      <a class="logo logo_place_header link" href="#"></a>
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
-        <a href="#" class="header__link">Узнать &rarr;</a></p>
+        <a href="#" class="header__link link">Узнать &rarr;</a></p>
       <img class="header__main-illustration" src="./images/header-image.png" alt="изображение опять двойка">
-      <div class="header__square-pic"></div>
+      <div class="header__square-pic rotation_animation_rotate"></div>
     </header>
     <main class="content">
       <section class="description">
@@ -35,6 +35,73 @@
               сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
           </div>
         </article>
+      </section>
+
+      <section class="techniques">
+        <h2 class="section-title">Техники обучения</h2>
+        <p class="section-subtitle">Пять практик от Барбары Оакли</p>
+        <ul class="cards">
+          <li class="cards__item">
+            <img class="cards__image" src="./images/cards-attention.png" alt="cards attention">
+            <h3 class="cards__title">Два вида внимания</h3>
+            <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
+          </li>
+          <li class="cards__item">
+            <img class="cards__image" src="./images/cards-recall.png" alt="cards recall">
+            <h3 class="cards__title">Recall</h3>
+            <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
+          </li>
+          <li class="cards__item">
+            <img class="cards__image" src="./images/cards-interliving.png" alt="cards interliving">
+            <h3 class="cards__title">Интерливинг</h3>
+            <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
+          </li>
+          <li class="cards__item">
+            <img class="cards__image" src="./images/cards-question.png" alt="cards question">
+            <h3 class="cards__title">Вопросы</h3>
+            <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
+          </li>
+          <li class="cards__item">
+            <img class="cards__image" src="./images/cards-competence.png" alt="cards competence">
+            <h3 class="cards__title">Иллюзия компетентности</h3>
+            <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
+          </li>
+        </ul>
+      </section>
+
+      <section class="video">
+        <h2 class="section-title">Видео нa TED</h2>
+        <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
+        <div class="video__iframes">
+          <iframe id="ytplayer-ted" type="text/html" class="video__iframe" width="515" height="316"
+          src="https://www.youtube.com/embed/5MgBikgcWnY"
+          frameborder="0" allowfullscreen></iframe>
+          <iframe id="ytplayer-urban" type="text/html" class="video__iframe" width="515" height="316"
+          src="https://www.youtube.com/embed/arj7oStGLkU"
+          frameborder="0" allowfullscreen></iframe>
+        </div>
+      </section>
+
+      <section class="oakley">
+        <article class="two-columns">
+          <h2 class="two-columns__brief">История Барбары Оакли.</h2>
+          <div class="two-columns__main-text">
+            <p class="two-columns__paragraph">С детства Барбаре не давалась математика. 
+            Она считала себя законченным гуманитарием, причём далеко не самым умным. 
+            В армии она изучала русский язык, чтобы получить надбавку, да так успешно, 
+            что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику. 
+            И тогда Барбара придумала свой подход к точным наукам. 
+            Оказалось, если вам что-то «плохо даётся», ваши добытые трудом знания гораздо глубже, 
+            чем у тех, кому всё ясно с первого взгляда.</p>
+          </div>
+        </article>
+      </section>
+
+      <section class="feynman">
+        <h2 class="feynman__title">Метод Фейнмана</h2>
+        <p class="feynman__subtitle">Выучить и не забыть.</p>
+        <a href="#" class="feynman__link link">Подробнее &rarr;</a>
+        <img class="feynman__illustration" src="./images/feynman.png" alt="изображение Фейнмана">
       </section>
 
       <section class="digits">
@@ -78,11 +145,21 @@
         </ul>
       </section>
 
-      <section class="feynman">
-        <h2 class="feynman__title">Метод Фейнмана</h2>
-        <p class="feynman__subtitle">Выучить и не забыть.</p>
-        <a href="#" class="feynman__link">Подробнее &rarr;</a>
-        <img class="feynman__illustration" src="./images/feynman.png" alt="изображение Фейнмана">
+      <section class="khan">
+        <article class="khan__container">
+          <p class="khan__author">Салман Хан</p>
+          <h2 class="khan__title">Весь мир — школа</h2>
+          <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов 
+          студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, 
+          кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, 
+          которые приносят успех в школе, карьере и жизни.</p>
+          <h3 class="khan__quote-author">Джордж Лукас</h3>
+          <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
+          <div class="khan__book-container">
+            <img src="./images/khan-book.jpg" class="khan__book-pic" alt="Весь мир - школа. Салман Хан">
+            <a href="#" class="khan__buy-link link">Купить книгу &rarr;</a>
+          </div>
+        </article>
       </section>
 
       <section class="kaufman">
@@ -130,34 +207,45 @@
             <p class="table__text">Уделяйте внимание количеству и скорости.</p>
           </li>
         </ul>
-        <div class="kaufman__triangle"></div>
+        <div class="kaufman__triangle rotation_animation_rotate"></div>
+      </section>
+
+      <section class="resources">
+        <h2 class="section-title">Полезные ресурсы</h2>
+        <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
+        <ul class="resources__logo-zone">
+          <li><a href="#" class="link"><img src="./images/resources-arzamas.svg" class="resources__logo" alt="Arzama"></a></li>
+          <li><a href="#" class="link"><img src="./images/resources-n1.svg" class="resources__logo" alt="N1"></a></li>
+          <li><a href="#" class="link"><img src="./images/resources-strelka.svg" class="resources__logo" alt="Strelka"></a></li>
+          <li><a href="#" class="link"><img src="./images/resources-polka.svg" class="resources__logo" alt="Полка"></a></li>
+        </ul>
       </section>
     </main>
     
     <footer class="footer">
       <div class="footer__columns">
         <div class="footer__column footer__column_content_copyright">
-          <a class="logo logo_place_footer" href="#"></a>
+          <a class="logo logo_place_footer link" href="#"></a>
           <p class="footer__author">&copy;2020. Милана Бируля</p>
         </div>
         <nav class="footer__column footer__column_content_info">
           <h5 class="footer__column-heading">О Практикуме</h5>
           <ul class="footer__column-links">
-            <li><a class="footer__links" href="#">Главная</a></li>
-            <li><a class="footer__links" href="#">Концепция</a></li>
-            <li><a class="footer__links" href="#">Наставники</a></li>
+            <li><a class="footer__links link" href="#">Главная</a></li>
+            <li><a class="footer__links link" href="#">Концепция</a></li>
+            <li><a class="footer__links link" href="#">Наставники</a></li>
           </ul>
         </nav>
         <nav class="footer__column footer__column_content_social">
           <h5 class="footer__column-heading">Соцсети</h5>
           <ul class="footer__column-links">
-            <li><a class="footer__links" href="#">
+            <li><a class="footer__links link" href="#">
               <img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="иконка Facebook">Facebook
             </a></li>
-            <li><a class="footer__links" href="#">
+            <li><a class="footer__links link" href="#">
               <img class="footer__social-icon" src="./images/vk_color_white.svg" alt="иконка ВКонтакте">ВКонтакте
             </a></li>
-            <li><a class="footer__links" href="#">
+            <li><a class="footer__links link" href="#">
               <img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="иконка Instagram">Instagram
             </a></li>
           </ul> 
