--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <body>
   <div class="page">
     <header class="header">
-      <a class="logo logo_place_header link" href="#"></a>
+      <a href="#" class="logo logo_place_header link" target="_blank" rel="noopener"></a>
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
-        <a href="#" class="header__link link">Узнать &rarr;</a></p>
+        <a href="#" class="header__link link" target="_blank" rel="noopener">Узнать &rarr;</a></p>
       <img class="header__main-illustration" src="./images/header-image.png" alt="изображение опять двойка">
-      <div class="header__square-pic rotation_animation_rotate"></div>
+      <div class="header__square-pic animation-rotate"></div>
     </header>
     <main class="content">
       <section class="description">
@@ -100,7 +100,7 @@
       <section class="feynman">
         <h2 class="feynman__title">Метод Фейнмана</h2>
         <p class="feynman__subtitle">Выучить и не забыть.</p>
-        <a href="#" class="feynman__link link">Подробнее &rarr;</a>
+        <a href="#" class="feynman__link link" target="_blank" rel="noopener">Подробнее &rarr;</a>
         <img class="feynman__illustration" src="./images/feynman.png" alt="изображение Фейнмана">
       </section>
 
@@ -157,7 +157,7 @@
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
             <img src="./images/khan-book.jpg" class="khan__book-pic" alt="Весь мир - школа. Салман Хан">
-            <a href="#" class="khan__buy-link link">Купить книгу &rarr;</a>
+            <a href="#" class="khan__buy-link link" target="_blank" rel="noopener">Купить книгу &rarr;</a>
           </div>
         </article>
       </section>
@@ -207,17 +207,17 @@
             <p class="table__text">Уделяйте внимание количеству и скорости.</p>
           </li>
         </ul>
-        <div class="kaufman__triangle rotation_animation_rotate"></div>
+        <div class="kaufman__triangle animation-rotate"></div>
       </section>
 
       <section class="resources">
         <h2 class="section-title">Полезные ресурсы</h2>
         <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
         <ul class="resources__logo-zone">
-          <li><a href="#" class="link"><img src="./images/resources-arzamas.svg" class="resources__logo" alt="Arzama"></a></li>
-          <li><a href="#" class="link"><img src="./images/resources-n1.svg" class="resources__logo" alt="N1"></a></li>
-          <li><a href="#" class="link"><img src="./images/resources-strelka.svg" class="resources__logo" alt="Strelka"></a></li>
-          <li><a href="#" class="link"><img src="./images/resources-polka.svg" class="resources__logo" alt="Полка"></a></li>
+          <li><a href="#" class="link" target="_blank" rel="noopener"><img src="./images/resources-arzamas.svg" class="resources__logo" alt="Arzama"></a></li>
+          <li><a href="#" class="link" target="_blank" rel="noopener"><img src="./images/resources-n1.svg" class="resources__logo" alt="N1"></a></li>
+          <li><a href="#" class="link" target="_blank" rel="noopener"><img src="./images/resources-strelka.svg" class="resources__logo" alt="Strelka"></a></li>
+          <li><a href="#" class="link" target="_blank" rel="noopener"><img src="./images/resources-polka.svg" class="resources__logo" alt="Полка"></a></li>
         </ul>
       </section>
     </main>
@@ -225,27 +225,27 @@
     <footer class="footer">
       <div class="footer__columns">
         <div class="footer__column footer__column_content_copyright">
-          <a class="logo logo_place_footer link" href="#"></a>
+          <a href="#" class="logo logo_place_footer link" href="#" target="_blank" rel="noopener"></a>
           <p class="footer__author">&copy;2020. Милана Бируля</p>
         </div>
         <nav class="footer__column footer__column_content_info">
           <h5 class="footer__column-heading">О Практикуме</h5>
           <ul class="footer__column-links">
-            <li><a class="footer__links link" href="#">Главная</a></li>
-            <li><a class="footer__links link" href="#">Концепция</a></li>
-            <li><a class="footer__links link" href="#">Наставники</a></li>
+            <li><a class="footer__links link" href="#" target="_blank" rel="noopener">Главная</a></li>
+            <li><a class="footer__links link" href="#" target="_blank" rel="noopener">Концепция</a></li>
+            <li><a class="footer__links link" href="#" target="_blank" rel="noopener">Наставники</a></li>
           </ul>
         </nav>
         <nav class="footer__column footer__column_content_social">
           <h5 class="footer__column-heading">Соцсети</h5>
           <ul class="footer__column-links">
-            <li><a class="footer__links link" href="#">
+            <li><a class="footer__links link" href="#" target="_blank" rel="noopener">
               <img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="иконка Facebook">Facebook
             </a></li>
-            <li><a class="footer__links link" href="#">
+            <li><a class="footer__links link" href="#" target="_blank" rel="noopener">
               <img class="footer__social-icon" src="./images/vk_color_white.svg" alt="иконка ВКонтакте">ВКонтакте
             </a></li>
-            <li><a class="footer__links link" href="#">
+            <li><a class="footer__links link" href="#" target="_blank" rel="noopener">
               <img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="иконка Instagram">Instagram
             </a></li>
           </ul> 
