--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
     <footer class="footer">
       <div class="footer__columns">
         <div class="footer__column footer__column_content_copyright">
-          <a href="#" class="logo logo_place_footer link" href="#" target="_blank" rel="noopener"></a>
+          <a class="logo logo_place_footer link" href="#" target="_blank" rel="noopener"></a>
           <p class="footer__author">&copy;2020. Милана Бируля</p>
         </div>
         <nav class="footer__column footer__column_content_info">
